[gd_scene load_steps=14 format=3 uid="uid://b2t1immwsvpbp"]

[ext_resource type="Texture2D" uid="uid://b8sb3hd6h7k67" path="res://Assets/Textures/UI/game-menu.png" id="1_umfxd"]
[ext_resource type="Script" path="res://Prefabs/User Interface/menu.gd" id="1_wsd3a"]
[ext_resource type="FontFile" uid="uid://b0qf45wixf6i3" path="res://Assets/Fonts/BirchLeaf.ttf" id="2_vsc6g"]
[ext_resource type="Script" path="res://Scripts/User Interface/ButtonBBCODE.gd" id="4_jjmgd"]
[ext_resource type="Script" path="res://Prefabs/User Interface/Audio.gd" id="5_o2381"]
[ext_resource type="Resource" uid="uid://dn00ylsh3p8e1" path="res://Data/Settings/Settings.tres" id="6_uwtpi"]
[ext_resource type="Script" path="res://Prefabs/User Interface/Graphics.gd" id="7_hqku3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqe1c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ba7f1"]

[sub_resource type="Theme" id="Theme_pp2vs"]
default_font = ExtResource("2_vsc6g")
default_font_size = 32
CheckButton/styles/focus = SubResource("StyleBoxEmpty_yqe1c")
CheckButton/styles/pressed = SubResource("StyleBoxEmpty_ba7f1")
OptionButton/font_sizes/font_size = 32
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_shadow_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 7
RichTextLabel/constants/shadow_offset_x = 0
RichTextLabel/constants/shadow_outline_size = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ds7w7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lu6sr"]

[sub_resource type="Theme" id="Theme_rqhpj"]
default_font = ExtResource("2_vsc6g")
default_font_size = 46
Button/colors/font_hover_color = Color(0.952941, 0.65098, 0.258824, 1)
Button/styles/focus = SubResource("StyleBoxEmpty_ds7w7")
Button/styles/pressed = SubResource("StyleBoxEmpty_lu6sr")
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 6

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wsd3a")
settings = ExtResource("6_uwtpi")

[node name="Game-menu" type="Sprite2D" parent="."]
position = Vector2(960, 371)
scale = Vector2(1.29333, 1.29333)
texture = ExtResource("1_umfxd")
metadata/_edit_lock_ = true

[node name="Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
layout_mode = 0
offset_left = 494.0
offset_top = 131.0
offset_right = 1424.0
offset_bottom = 253.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 86
bbcode_enabled = true
text = "[center]Menu[/center]"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 493.0
offset_top = 245.0
offset_right = 1423.0
offset_bottom = 630.0

[node name="Resume" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/VBoxContainer/Resume"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Resume[/center]"
fit_content = true
scroll_active = false

[node name="Map" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/VBoxContainer/Map"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Map[/center]"
fit_content = true
scroll_active = false

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/VBoxContainer/Options"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Options[/center]"
fit_content = true
scroll_active = false

[node name="SaveExit" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/VBoxContainer/SaveExit"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Save & Exit[/center]"
fit_content = true
scroll_active = false

[node name="Options" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Options" type="RichTextLabel" parent="Options"]
layout_mode = 0
offset_left = 494.0
offset_top = 131.0
offset_right = 1424.0
offset_bottom = 253.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 86
bbcode_enabled = true
text = "[center]Options[/center]"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 0
offset_left = 493.0
offset_top = 245.0
offset_right = 1423.0
offset_bottom = 630.0

[node name="Graphics" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Options/VBoxContainer/Graphics"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Graphics[/center]"
fit_content = true
scroll_active = false

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Options/VBoxContainer/Audio"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Audio[/center]"
fit_content = true
scroll_active = false

[node name="Options_Back" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Options/VBoxContainer/Options_Back"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Back[/center]"
fit_content = true
scroll_active = false

[node name="Audio" type="Control" parent="Options"]
visible = false
anchors_preset = 0
offset_top = 49.0
offset_right = 40.0
offset_bottom = 89.0
script = ExtResource("5_o2381")
settings = ExtResource("6_uwtpi")

[node name="Audio" type="RichTextLabel" parent="Options/Audio"]
layout_mode = 0
offset_left = 594.0
offset_top = 180.0
offset_right = 1524.0
offset_bottom = 302.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "Audio"
scroll_active = false

[node name="Master Audio" type="RichTextLabel" parent="Options/Audio"]
layout_mode = 0
offset_left = 618.0
offset_top = 257.0
offset_right = 1382.0
offset_bottom = 339.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Master Audio"
scroll_active = false

[node name="Master_slider" type="HSlider" parent="Options/Audio/Master Audio"]
layout_mode = 0
offset_left = 238.0
offset_top = 10.0
offset_right = 491.0
offset_bottom = 26.0
min_value = -30.0
max_value = 0.0

[node name="Level" type="RichTextLabel" parent="Options/Audio/Master Audio"]
layout_mode = 0
offset_left = 500.605
offset_top = 8.0
offset_right = 1009.61
offset_bottom = 41.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "100%"
scroll_active = false

[node name="Music" type="RichTextLabel" parent="Options/Audio"]
layout_mode = 0
offset_left = 618.0
offset_top = 300.0
offset_right = 1285.0
offset_bottom = 382.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Music"
scroll_active = false

[node name="Music_slider" type="HSlider" parent="Options/Audio/Music"]
layout_mode = 0
offset_left = 238.0
offset_top = 10.0
offset_right = 491.0
offset_bottom = 26.0
min_value = -30.0
max_value = 0.0

[node name="Level" type="RichTextLabel" parent="Options/Audio/Music"]
layout_mode = 0
offset_left = 500.605
offset_top = 8.0
offset_right = 1009.61
offset_bottom = 41.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "100%"
scroll_active = false

[node name="Sound Effects" type="RichTextLabel" parent="Options/Audio"]
layout_mode = 0
offset_left = 618.0
offset_top = 343.0
offset_right = 1401.0
offset_bottom = 425.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Sound Effects"
scroll_active = false

[node name="Sound_effects_slider" type="HSlider" parent="Options/Audio/Sound Effects"]
layout_mode = 0
offset_left = 238.0
offset_top = 10.0
offset_right = 491.0
offset_bottom = 26.0
min_value = -30.0
max_value = 0.0

[node name="Level" type="RichTextLabel" parent="Options/Audio/Sound Effects"]
layout_mode = 0
offset_left = 500.605
offset_top = 8.0
offset_right = 1009.61
offset_bottom = 41.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "100%"
scroll_active = false

[node name="Audio_back" type="Button" parent="Options/Audio"]
layout_mode = 0
offset_left = 495.0
offset_top = 482.0
offset_right = 503.0
offset_bottom = 537.0
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Options/Audio/Audio_back"]
layout_mode = 0
offset_left = 1.0
offset_right = 932.0
offset_bottom = 47.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Back[/center]"
fit_content = true
scroll_active = false

[node name="Graphics" type="Control" parent="Options"]
visible = false
anchors_preset = 0
offset_top = 49.0
offset_right = 40.0
offset_bottom = 89.0
script = ExtResource("7_hqku3")

[node name="Graphics" type="RichTextLabel" parent="Options/Graphics"]
layout_mode = 0
offset_left = 619.0
offset_top = 180.0
offset_right = 1524.0
offset_bottom = 302.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "Graphics"
scroll_active = false

[node name="vSync" type="RichTextLabel" parent="Options/Graphics"]
layout_mode = 0
offset_left = 639.0
offset_top = 257.0
offset_right = 1382.0
offset_bottom = 339.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "V-Sync"
scroll_active = false

[node name="Status" type="RichTextLabel" parent="Options/Graphics/vSync"]
layout_mode = 0
offset_left = 264.0
offset_top = 7.0
offset_right = 773.005
offset_bottom = 40.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "OFF"
scroll_active = false

[node name="CheckButton" type="CheckButton" parent="Options/Graphics/vSync"]
layout_mode = 0
offset_left = 182.0
offset_top = -5.0
offset_right = 226.0
offset_bottom = 19.0
scale = Vector2(2, 2)
theme = SubResource("Theme_pp2vs")

[node name="DisplayMode" type="RichTextLabel" parent="Options/Graphics"]
layout_mode = 0
offset_left = 642.0
offset_top = 313.0
offset_right = 1423.0
offset_bottom = 373.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Display Mode"
scroll_active = false

[node name="DisplayMode_selection" type="OptionButton" parent="Options/Graphics/DisplayMode"]
layout_mode = 0
offset_left = 255.0
offset_right = 459.0
offset_bottom = 45.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/font_size = 32
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "FullScreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="Resolution" type="RichTextLabel" parent="Options/Graphics"]
layout_mode = 0
offset_left = 642.0
offset_top = 369.0
offset_right = 1423.0
offset_bottom = 429.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Display Resolution"
scroll_active = false

[node name="DisplayResolution_selection" type="OptionButton" parent="Options/Graphics/Resolution"]
layout_mode = 0
offset_left = 324.0
offset_right = 528.0
offset_bottom = 45.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/font_size = 32
alignment = 1

[node name="Scale Mode" type="RichTextLabel" parent="Options/Graphics"]
layout_mode = 0
offset_left = 642.0
offset_top = 422.0
offset_right = 1423.0
offset_bottom = 524.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Scaling"
scroll_active = false

[node name="Scaling_selection" type="OptionButton" parent="Options/Graphics/Scale Mode"]
layout_mode = 0
offset_left = 131.0
offset_right = 335.0
offset_bottom = 45.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/font_size = 32
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Bilinear"
popup/item_0/id = 0
popup/item_1/text = "FSR 1.0"
popup/item_1/id = 1
popup/item_2/text = "FSR 2.2"
popup/item_2/id = 2

[node name="Scaling_slider" type="HSlider" parent="Options/Graphics/Scale Mode"]
layout_mode = 0
offset_left = 1.0
offset_top = 59.0
offset_right = 254.0
offset_bottom = 75.0
min_value = 0.5
max_value = 2.0
step = 0.1
value = 0.5

[node name="Level" type="RichTextLabel" parent="Options/Graphics/Scale Mode"]
layout_mode = 0
offset_left = 263.605
offset_top = 57.0
offset_right = 772.61
offset_bottom = 90.0
theme = SubResource("Theme_pp2vs")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "100%"
scroll_active = false

[node name="Graphics_back" type="Button" parent="Options/Graphics"]
layout_mode = 0
offset_left = 495.0
offset_top = 482.0
offset_right = 503.0
offset_bottom = 537.0
theme = SubResource("Theme_rqhpj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
"
flat = true
script = ExtResource("4_jjmgd")
hover_text_color = Color(1, 0.533333, 0, 1)
default_text_color = Color(1, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Options/Graphics/Graphics_back"]
layout_mode = 0
offset_left = 1.0
offset_top = 39.0
offset_right = 932.0
offset_bottom = 86.0
mouse_filter = 1
theme = SubResource("Theme_rqhpj")
bbcode_enabled = true
text = "[center]Back[/center]"
fit_content = true
scroll_active = false

[connection signal="mouse_entered" from="Menu/VBoxContainer/Resume" to="Menu/VBoxContainer/Resume" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/VBoxContainer/Resume" to="Menu/VBoxContainer/Resume" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Map" to="Menu/VBoxContainer/Map" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/VBoxContainer/Map" to="Menu/VBoxContainer/Map" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/Map" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Options" to="Menu/VBoxContainer/Options" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/VBoxContainer/Options" to="Menu/VBoxContainer/Options" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/SaveExit" to="Menu/VBoxContainer/SaveExit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/VBoxContainer/SaveExit" to="Menu/VBoxContainer/SaveExit" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/SaveExit" to="." method="_on_save_exit_pressed"]
[connection signal="mouse_entered" from="Options/VBoxContainer/Graphics" to="Options/VBoxContainer/Graphics" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/VBoxContainer/Graphics" to="Options/VBoxContainer/Graphics" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/VBoxContainer/Graphics" to="." method="_on_graphics_pressed"]
[connection signal="mouse_entered" from="Options/VBoxContainer/Audio" to="Options/VBoxContainer/Audio" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/VBoxContainer/Audio" to="Options/VBoxContainer/Audio" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="mouse_entered" from="Options/VBoxContainer/Options_Back" to="Options/VBoxContainer/Options_Back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/VBoxContainer/Options_Back" to="Options/VBoxContainer/Options_Back" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/VBoxContainer/Options_Back" to="." method="_on_options_back_pressed"]
[connection signal="value_changed" from="Options/Audio/Master Audio/Master_slider" to="Options/Audio" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Options/Audio/Music/Music_slider" to="Options/Audio" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Options/Audio/Sound Effects/Sound_effects_slider" to="Options/Audio" method="_on_sound_effects_slider_value_changed"]
[connection signal="mouse_entered" from="Options/Audio/Audio_back" to="Options/Audio/Audio_back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/Audio/Audio_back" to="Options/Audio/Audio_back" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/Audio/Audio_back" to="." method="_on_audio_back_pressed"]
[connection signal="toggled" from="Options/Graphics/vSync/CheckButton" to="Options/Graphics" method="_on_check_button_toggled"]
[connection signal="item_selected" from="Options/Graphics/DisplayMode/DisplayMode_selection" to="Options/Graphics" method="_on_display_mode_selection_item_selected"]
[connection signal="item_selected" from="Options/Graphics/Resolution/DisplayResolution_selection" to="Options/Graphics" method="_on_display_resolution_selection_item_selected"]
[connection signal="item_selected" from="Options/Graphics/Scale Mode/Scaling_selection" to="Options/Graphics" method="_on_scaling_selection_item_selected"]
[connection signal="value_changed" from="Options/Graphics/Scale Mode/Scaling_slider" to="Options/Graphics" method="_on_scaling_slider_value_changed"]
[connection signal="mouse_entered" from="Options/Graphics/Graphics_back" to="Options/Graphics/Graphics_back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/Graphics/Graphics_back" to="Options/Graphics/Graphics_back" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/Graphics/Graphics_back" to="." method="_on_graphics_back_pressed"]
